--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^18.2.0",
+    "socket.io-client": "^4.7.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
