--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/express": "^4.17.21",
+    "@types/express": "^5.0.0",
+    "express": "^4.21.2",
     "socket.io": "^4.7.3",
     "typescript": "^5.8.2"
   }
